--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -26,7 +26,7 @@
 			</div>
 		</div><!-- /.row -->
 
-		<h4 class="text-center">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
+		<h4 class="text-center filter-text">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
 
 		<!-- Bills -->
 		<div class="row">
