--- a/public/client/views/overview/overview.html
+++ b/public/client/views/overview/overview.html
@@ -9,20 +9,20 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12 center-block">
                     <div class="intro-message">
                         <h1>My Politics</h1>
-                        <h3>Spreading Political Knowledge, Encouraging Political Participation</h3>
+                        <h3>Political Knowledge At Your Fingertips</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="#/legislators" class="btn btn-default btn-lg"><span class="network-name">Legislators</span></a>
+                                <button href="#/legislators" class="btn btn-default btn-lg">Legislators</button>
                             </li>
                             <li>
-                                <a href="#/votes" class="btn btn-default btn-lg"><span class="network-name">Votes</span></a>
+                                <button href="#/votes" class="btn btn-default btn-lg">Votes</button>
                             </li>
                             <li>
-                                <a href="#/bills" class="btn btn-default btn-lg"><span class="network-name">Bills</span></a>
+                                <button href="#/bills" class="btn btn-default btn-lg">Bills</button>
                             </li>
                         </ul>
                     </div>
@@ -45,7 +45,12 @@
                 <div class="col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get To Know Your Legislators!</h2>
-                    <p class="lead">Who are the Senators from Florida?<br>How many Republicans are in the House of Representatives?<br>Interested in seeing how a particular legislator is voting?<br><br>Find all of this information and more!</p>
+                    <ul>
+                        <li>Who are the Senators from each State?</li>
+                        <li>How many members of each party are in each chamber of Congress?</li>
+                        <li>Who are the representatives of each state?</li>
+                    </ul>
+                    <p>Get to know each member of Congress!</p>
                 </div>
                 <div class="col-sm-6">
                     <img class="img-responsive" src="http://ww1.hdnux.com/photos/50/20/67/10554844/3/920x1240.jpg" alt="">
@@ -65,10 +70,14 @@
             <div class="row">
                 <div class="col-sm-push-6  col-sm-6">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">See Which Votes Are Being Held!</h2>
-                    <p class="lead">Votes are how Congress gets things done. Which action items are getting votes? Which bills? Which nominations? How is your representative voting?<br><br>
+                    <h2 class="section-heading">Which Votes Are Getting Held and When?</h2>
+                    <ul>
+                        <li>Which bills are getting a vote?</li>
+                        <li>What is the result of those votes?</li>
+                        <li>How are your representatives voting?</li>
+                    </ul>
 
-                   	Also get a visual breakdown of votes by party!</p>
+                   	<p>Also get a visual breakdown of votes by party!</p>
                 </div>
                 <div class="col-sm-pull-6 col-sm-6">
                     <img class="img-responsive" src="./client/images/votes.jpg" alt="">
@@ -89,9 +98,13 @@
                 <div class="col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Explore Congress' Bills</h2>
-                    <p class="lead">Search for any topic that interests you such and see the laws relating to that topic that our Congress is considering. Follow a bill's life cycle from when they are proposed to when the President signs them (or vetoes them).
+                    <ul>
+                        <li>Which bills are being considered relating to guns? transportation? the economy?</li>
+                        <li>What actions have been taken on a bill?</li>
+                        <li>Has the President signed them yet? Or did he veto them?</li>
+                    </ul>
 
-                   	You can also get details such as the bill's sponsor and cosponsors!</p>
+                   	<p>Also get details on who is sponsoring and cosponsoring bills!</p>
                 </div>
                 <div class="col-sm-6">
                     <img class="img-responsive" src="http://media.npr.org/assets/img/2015/12/10/essa-edit_custom-235c1ae54b2e7709fe35b6c3632e2ae6e1f4f99b-s900-c85.jpg" alt="">
