--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -10,15 +10,15 @@
 	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/votes">clearing</a> your filters.</div>
 
 	<!-- Content -->
-	<div class="container-fluid" ng-show="!model.hasError">
+	<div ng-show="!model.hasError">
 		<div class="row">
 			<!-- Filters -->
-			<div class="large-3 show-for-large columns">
+			<div class="large-2 show-for-large columns filter-background">
 				<div ng-include="'./client/views/filters/filters.html'" ng-controller="FiltersController as model"></div>
 			</div>
 
 			<!-- Votes -->
-			<div class="small-12 large-9 columns">
+			<div class="small-12 large-10 columns">
 				<div class="row">
 					<div class="small-12 columns" ng-show="!model.hasNoResults">
 						<span><strong>Count: </strong>{{model.totalVoteCount}}</span>
@@ -28,7 +28,7 @@
 
 					<div class="small-12 columns hide-for-large">
 						<div class="row">
-							<button class="btn btn-lg btn-primary small-6 columns hide-for-large" ng-click="model.showFilterPopup($event)">
+							<button class="btn btn-lg small-6 columns hide-for-large filter-background" ng-click="model.showFilterPopup($event)">
 							Filter
 							</button>
 						</div>
