--- a/public/client/views/voteDetail/voteDetail.html
+++ b/public/client/views/voteDetail/voteDetail.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,11 +11,11 @@
 	<div class="container" ng-show="!model.hasError">
 		
 		<!-- Vote Metadata -->
-		<h1 class="text-center">{{model.currentVote.question}}</h1>
-		<h2 class="text-center" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title != undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.short_title}}</a></h2>
-		<h2 class="text-center" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title === undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.official_title}}</a></h2>
-		<h2 class="text-center">Result: {{model.currentVote.result}}</h2>
-		<h2 class="text-center" ng-show="model.currentVote.nomination != undefined">Nomination: {{model.currentVote.nomination.nominees[0].name}} for {{model.currentVote.nomination.organization}}</h2>
+		<h1 class="text-center text-margins">{{model.currentVote.question}}</h1>
+		<h2 class="text-center text-margins" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title != undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.short_title}}</a></h2>
+		<h2 class="text-center text-margins" ng-show="model.currentVote.bill != undefined && model.currentVote.bill.short_title === undefined">Bill: <a ng-href="#/bill/{{model.currentVote.bill_id}}">{{model.currentVote.bill.official_title}}</a></h2>
+		<h2 class="text-center text-margins">Result: {{model.currentVote.result}}</h2>
+		<h2 class="text-center text-margins" ng-show="model.currentVote.nomination != undefined">Nomination: {{model.currentVote.nomination.nominees[0].name}} for {{model.currentVote.nomination.organization}}</h2>
 
 		<!-- Vote Details -->
 		<table class="table table-striped">
@@ -42,13 +41,13 @@
 
 		<!-- Vote Charts -->
 		<div class="row">
-			<div class="small-6 columns thumbnail">
+			<div class="small-12 medium-6 columns graph-border bottom-margin">
 				<fusioncharts width="100%" height="300" type="bar2d" dataSource="{{model.democratDataSource}}"></fusioncharts>
 			</div>
-			<div class="small-6 columns thumbnail">
+			<div class="small-12 medium-6 columns graph-border bottom-margin">
 				<fusioncharts width="100%" height="300" type="bar2d" dataSource="{{model.republicanDataSource}}"></fusioncharts>
 			</div>
-			<div class="small-12 columns thumbnail">
+			<div class="small-12 columns graph-border">
 				<fusioncharts width="100%" height="300" type="bar2d" dataSource="{{model.totalDataSource}}"></fusioncharts>
 			</div>
 		</div>
