--- a/public/client/views/filters/filters.html
+++ b/public/client/views/filters/filters.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row bottom-margin">
 	<div class="large-12 columns" ng-repeat="filterGroup in model.filterGroups">
 		<div class="row">
 			<div class="large-12 columns">
