--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -28,7 +28,7 @@
 
 					<div class="small-12 columns hide-for-large">
 						<div class="row">
-							<button class="btn btn-lg small-6 columns hide-for-large filter-background" ng-click="model.showFilterPopup($event)">
+							<button class="btn btn-lg small-6 columns hide-for-large filter-background bottom-margin" ng-click="model.showFilterPopup($event)">
 							Filter
 							</button>
 						</div>
