--- a/public/client/views/header/header.html
+++ b/public/client/views/header/header.html
@@ -8,7 +8,9 @@
 		    <span class="icon-bar"></span>
 		    <span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#/home">My Politics</a>
+		  <a class="navbar-brand" href="#/home">
+		  	<img src="./client/images/mypolitics_logo.svg">
+		  </a>
 		</div>
 
 		<div class="collapse navbar-collapse" id="navbar-contents">
