--- a/public/client/views/legislatorDetail/legislatorDetail.html
+++ b/public/client/views/legislatorDetail/legislatorDetail.html
@@ -97,15 +97,15 @@
 
 		  <!-- Nav tabs -->
 		  <ul class="nav nav-tabs" role="tablist">
-		    <li role="presentation" class="active" ng-click="model.setSubView('votes')"><a aria-controls="home" role="tab" data-toggle="tab">Votes</a></li>
-		    <li role="presentation" ng-click="model.setSubView('sponsoredBills')"><a aria-controls="home" role="tab" data-toggle="tab">Sponsored Bills</a></li>
-		    <li role="presentation" ng-click="model.setSubView('cosponsoredBills')"><a aria-controls="home" role="tab" data-toggle="tab">Cosponsored Bills</a></li>
+		    <li class="text-center active" role="presentation" ng-click="model.setSubView('votes')"><a aria-controls="home" role="tab" data-toggle="tab">Recent <br>Votes</a></li>
+		    <li class="text-center" role="presentation" ng-click="model.setSubView('sponsoredBills')"><a aria-controls="home" role="tab" data-toggle="tab">Sponsored <br>Bills</a></li>
+		    <li class="text-center" role="presentation" ng-click="model.setSubView('cosponsoredBills')"><a aria-controls="home" role="tab" data-toggle="tab">Cosponsored <br>Bills</a></li>
 		  </ul>
 
 		</div>
 
-		<div class="row">
-			<div class="small-6 medium-3 columns thumbnail" ng-show="model.currentSubView === 'sponsoredBills'" ng-repeat="sponsoredBill in model.information.sponsoredBills.data" ng-click="model.onBillClick(sponsoredBill.bill_id)">
+		<div class="row tab-style">
+			<div class="small-6 medium-3 large-2 columns thumbnail" ng-show="model.currentSubView === 'sponsoredBills'" ng-repeat="sponsoredBill in model.information.sponsoredBills.data" ng-click="model.onBillClick(sponsoredBill.bill_id)">
 				<p class="text-right">
 					{{sponsoredBill.bill_type | uppercase}} {{sponsoredBill.number}}
 				</p>
@@ -120,7 +120,7 @@
 				</p>	
 			</div>
 
-			<div class="small-6 medium-3 columns thumbnail" ng-show="model.currentSubView === 'cosponsoredBills'" ng-repeat="cosponsoredBill in model.information.cosponsoredBills.data" ng-click="model.onBillClick(cosponsoredBill.bill_id)">
+			<div class="small-6 medium-3 large-2 columns thumbnail" ng-show="model.currentSubView === 'cosponsoredBills'" ng-repeat="cosponsoredBill in model.information.cosponsoredBills.data" ng-click="model.onBillClick(cosponsoredBill.bill_id)">
 				<p class="text-right">
 					{{cosponsoredBill.bill_type | uppercase}} {{cosponsoredBill.number}}
 				</p>
@@ -135,39 +135,41 @@
 				</p>	
 			</div>
 
-			<div ng-show="model.currentSubView === 'votes'">
-				<table class="table table-striped">
-					<tr>
-						<th>Question</th>
-						<th>Bill</th>
-						<th>Vote</th>
-						<th>Result</th>
-					</tr>
-					<tr ng-repeat="currentVote in model.information.votes.data">
-						<td>{{currentVote.question}}</td>
-						<td>
-							<a ng-href="#/bill/{{currentVote.bill.bill_id}}">{{currentVote.bill.official_title}}</a>
-						</td>
-						<td>
-							<a href="#/vote/{{currentVote.roll_id}}">{{currentVote.voters[model.currentLegislatorId].vote}}</a>
-						</td>
-						<td>{{currentVote.result}}</td>
-					</tr>
-				</table>
+			<div class="small-6 medium-3 large-2 columns thumbnail" ng-show="model.currentSubView === 'votes'" ng-repeat="currentVote in model.information.votes.data" ng-click="model.onVoteClick(currentVote.roll_id)">
+				<p class="text-center">
+					<strong>Voted <span ng-class="{'failed-text': currentVote.voters[model.currentLegislatorId].vote.toLowerCase().includes('nay'), 'passed-text': currentVote.voters[model.currentLegislatorId].vote.toLowerCase().includes('yea')}">{{currentVote.voters[model.currentLegislatorId].vote}}</span></strong>
+				</p>
+				<p>
+					<strong>{{currentVote.question}}</strong>
+				</p>
+				<p class="text-center">For</p>
+				<p ng-show="currentVote.bill.short_title">
+					{{currentVote.bill.short_title}}
+				</p>
+				<p ng-show="!currentVote.bill.short_title">
+					{{currentVote.bill.official_title}}
+				</p>
+				<p>
+					{{currentVote.voted_at | date : "longDate"}} @{{currentVote.voted_at | date : "shortTime"}}
+				</p>
+				<p class="text-center">
+					<strong>Result: <span ng-class="{'failed-text': currentVote.result.toLowerCase().includes('failed') || currentVote.result.toLowerCase().includes('rejected'), 'passed-text': !currentVote.result.toLowerCase().includes('failed') && !currentVote.result.toLowerCase().includes('rejected')}">{{currentVote.result}}</span></strong>
+				</p>
 			</div>
 
 			<div class="small-12 columns" ng-show="model.loadingInformation">
 				<img class="center-block" src="./client/images/ring-alt.svg">
 			</div>
+		</div>
 
+		<div class="row">
 			<!-- Load More Buttons -->
 			<div class="small-12 columns show-for-small-only bottom-margin" ng-show="model.information[model.currentSubView].data.length < model.information[model.currentSubView].totalCount">
-				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreSubViewData(16)">Load More</button>
+				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreSubViewData(12)">Load More</button>
 			</div>
 			<div class="medium-4 medium-offset-4 columns hide-for-small-only bottom-margin" ng-show="model.information[model.currentSubView].data.length < model.information[model.currentSubView].totalCount">
-				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreSubViewData(32)">Load More</button>
+				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreSubViewData(24)">Load More</button>
 			</div>
-
 		</div>
 
 	</div>
