--- a/public/client/views/voteDetail/voteDetail.html
+++ b/public/client/views/voteDetail/voteDetail.html
@@ -8,7 +8,7 @@
 	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or navigating back to the <a href="#/votes">Votes page</a>.</div>
 
 	<!-- Content -->
-	<div class="container" ng-show="!model.hasError">
+	<div ng-show="!model.hasError">
 		
 		<!-- Vote Metadata -->
 		<h1 class="text-center text-margins">{{model.currentVote.question}}</h1>
