--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -10,7 +10,7 @@
 	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/bills">clearing</a> your search term.</div>
 
 	<!-- Content -->
-	<div class="container-fluid" ng-show="!model.hasError">
+	<div class="main-content-side-padding" ng-show="!model.hasError">
 		
 		<!-- Search Bar -->
 		<div class="row">
