--- a/public/client/views/votes/votes.html
+++ b/public/client/views/votes/votes.html
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					
-					<div class="small-6 medium-3 columns thumbnail" ng-repeat="vote in model.votes" ng-click="model.onVoteClick(vote.roll_id)">
+					<div class="thumbnail small-6 medium-3 columns" ng-repeat="vote in model.votes" ng-click="model.onVoteClick(vote.roll_id)">
 						<p>
 							<strong>{{vote.question}}</strong>
 						</p>
