--- a/public/client/views/bills/bills.html
+++ b/public/client/views/bills/bills.html
@@ -7,64 +7,73 @@
 	<h1 class="text-center">Bills for Current Legislative Session</h1>
 
 	<!-- Error Message -->
-	<div class="text-center alert alert-danger" ng-show="model.hasError">Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/bills">clearing</a> your search term.</div>
+	<div class="text-center alert alert-danger" ng-show="model.hasError">
+		Error retrieving data! <br>Try <a href="" ng-click="model.refreshPage()">refreshing</a> the page or <a href="#/bills">clearing</a> your search term.
+	</div>
 
 	<!-- Content -->
 	<div class="main-content-side-padding" ng-show="!model.hasError">
-		
-		<!-- Search Bar -->
 		<div class="row">
-			<div class="small-12 medium-6 medium-offset-6 large-4 large-offset-4 columns">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Search for..." ng-model="model.searchTerm" ng-keypress="model.onKeyPress($event)">
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button" ng-click="model.onSearch()">
-							<span class="glyphicon glyphicon-search"></span>
-						</button>
-					</span>
-				</div><!-- /input-group -->
-			</div>
-		</div><!-- /.row -->
-
-		<h4 class="text-center filter-text">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
-
-		<!-- Bills -->
-		<div class="row">
-			<div class="small-6 medium-3 large-2 columns thumbnail" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
-				<p class="text-right">
-					{{bill.bill_type | uppercase}} {{bill.number}}
-				</p>
-				<p ng-show="bill.short_title">
-					<strong>{{bill.short_title}}</strong>
-				</p>
-				<p ng-show="!bill.short_title">
-					<strong>{{bill.official_title}}</strong>
-				</p>
-				<p>
-					{{bill.last_action_at | date : "longDate"}} @{{bill.last_action_at | date : "shortTime"}}
-				</p>
+			<!-- Title and Search Bar -->
+			<div class="small-12 columns">
+				<div class="row">
+					<div class="small-12 medium-6 medium-offset-6 large-4 large-offset-4 columns">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Search for..." ng-model="model.searchTerm" ng-keypress="model.onKeyPress($event)">
+							<span class="input-group-btn">
+								<button class="btn btn-default" type="button" ng-click="model.onSearch()">
+									<span class="glyphicon glyphicon-search"></span>
+								</button>
+							</span>
+						</div><!-- /input-group -->
+					</div>
+				</div><!-- /.row -->
 			</div>
 
-			<div class="small-12 columns" ng-show="model.loadingInformation">
-				<img class="center-block" src="./client/images/ring-alt.svg">
+			<h4 class="text-center filter-text">{{model.totalBillCount | number}}{{model.displayMessage}}</h4>
+
+			<!-- Bills -->
+			<div class="small-12 columns">
+				<div class="row">
+					<div class=" thumbnail small-6 medium-3 large-2 columns" ng-repeat="bill in model.bills" ng-click="model.onBillClick(bill.bill_id)">
+						<p class="text-right">
+							{{bill.bill_type | uppercase}} {{bill.number}}
+						</p>
+						<p ng-show="bill.short_title">
+							<strong>{{bill.short_title}}</strong>
+						</p>
+						<p ng-show="!bill.short_title">
+							<strong>{{bill.official_title}}</strong>
+						</p>
+						<p>
+							{{bill.last_action_at | date : "longDate"}} @{{bill.last_action_at | date : "shortTime"}}
+						</p>
+					</div>
+
+					<div class="small-12 columns" ng-show="model.loadingInformation">
+						<img class="center-block" src="./client/images/ring-alt.svg">
+					</div>
+				</div>
 			</div>
-		</div>
 
-		<!-- Error Message -->
-		<div class="text-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div>
+			<!-- Error Message -->
+			<div class="text-center alert alert-danger" ng-show="model.hasLoadError">Error loading data! <br>Try loading more again.</div>
 
-		<!-- Load More Buttons -->
-		<div class="row">
-			<div class="small-12 columns show-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
-				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
+			<!-- Load More Buttons -->
+			<div class="small-12 columns">
+				<div class="row">
+					<div class="small-12 columns show-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
+						<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(24)">More Bills</button>
+					</div>
+
+					<div class="medium-4 medium-offset-4 columns hide-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
+						<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(48)">More Bills</button>
+					</div>
+				</div>
 			</div>
+		</div> <!-- End of row -->
 
-			<div class="medium-4 medium-offset-4 columns hide-for-small-only bottom-margin" ng-show="model.bills.length < model.totalBillCount">
-				<button class="btn-primary btn-block btn-lg" ng-click="model.getMoreBills(48)">More Bills</button>
-			</div>
-		</div>
-
-	</div>	<!-- End of Container -->
+	</div>	<!-- End of Content Div -->
 
 </body>
 </html>
